# treepoem

./: .pre-commit-config.yaml  CHANGELOG.rst  HISTORY.rst  README.rst  download_bwipp.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: main.yml
requirements/: py310.txt  py311.txt  py312.txt  py35.txt  py36.txt  py37.txt  py38.txt  py39.txt
src/treepoem/: __init__.py  __main__.py
src/treepoem/postscriptbarcode/: barcode.ps
tests/: conftest.py  test_treepoem.py
tests/requirements/: py310.txt  py311.txt  py312.txt  py313.txt  py38.txt  py39.txt
treepoem/: __init__.py
